# xyte-mcp-alpha

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEPLOYMENT-PROGRESS.md  DEPLOYMENT-TODO.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  TODO.md  chatgpt-openapi.json  claude_desktop_config.json  docker-compose.celery.yaml  docker-compose.https.yml  docker-compose.local.yml  docker-compose.yml  easy_install.sh  mcp_stdio_wrapper.py  nginx-https.conf  pyproject.toml  pyrightconfig.json  registry.yaml  repomix-output.txt  requirements.txt  run_mcp.py  run_mcp.sh  run_mcp_dev.py  run_mcp_https.py  run_openai_wrapper.py  run_openai_wrapper_tests.sh  setup-https.sh  spec.md  start-chatgpt.sh  test_chatgpt_mode.py  test_mcp_minimal.py  test_minimal_mcp.py  test_wrapper.sh  (+1 more)
.github/workflows/: ci.yml
.setup/: install.sh  install.txt
docker/: Dockerfile
docs/: API_USAGE.md  DEPLOYMENT.md  HELM_VALUES.md  HOSTING_MCP.md  PLUGINS.md  REAL_LIFE_USAGE.md  capabilities.json  curl_examples.md  grafana_dashboard.json  openapi.json  plugin_api_version.md  postman_collection.json  spec.md  tasks.md  todo.md  wrappers.md
examples/: api_playground.py  basic_usage.py
helm/: Chart.yaml  values.yaml
helm/charts/celery/: Chart.yaml  values.yaml
helm/charts/celery/templates/: redis.yaml  worker.yaml
helm/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  worker-deployment.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  worker-deployment.yaml
ops/: mcp.service  pg_backup.sh
prometheus/: alerts.yaml
requirements/: dev.txt  prod.txt
scripts/: generate_capabilities.py  generate_openapi.py  generate_wrappers_md.py  profile_server.py  security_scan.sh
src/xyte_mcp/: __init__.py  __main__.py  auth.py  auth_xyte.py  celery_app.py  client.py  config.py  db.py  deps.py  hooks.py  http.py  http_utils.py  logging_utils.py  mapping.py  models.py  openai_wrapper.py  plugin.py  prompts.py  rate_limiter.py  resources.py  server.py  sse_server.py  swagger_setup.py  tasks.py  utils.py
src/xyte_mcp/presets/: default.yaml
src/xyte_mcp/tools/: __init__.py  presets.py
src/xyte_mcp/worker/: long.py
src/xyte_mcp_alpha/: __init__.py  __main__.py  api_client.py  auth.py  auth_xyte.py  bucket.lua  celery_app.py  client.py  config.py  db.py  deps.py  events.py  experimental.py  hooks.py  http.py  logging_utils.py  models.py  plugin.py  prompts.py  rate_limiter.py  resources.py  server.py  stdio_guard.py  tasks.py  tools.py  tools_misc.py  user.py  utils.py
src/xyte_mcp_alpha/plugins/: sample.py
src/xyte_mcp_alpha/tools/: __init__.py  device.py  presets.py  room.py  ticket.py  utility.py
src/xyte_mcp_alpha/worker/: long.py
tests/: README.md  bad_plugin.py  dummy_redis.py  helper_plugin.py  test_auth.py  test_auth_middleware.py  test_config.py  test_config_endpoint.py  test_deployment_assets.py  test_deployment_files.py  test_discovery_and_events.py  test_errors.py  test_health.py  test_log_redaction.py  test_metrics.py  test_openai_wrapper.py  test_openai_wrapper_standalone.py  test_plugin_http.py  test_plugin_integration.py  test_plugin_lifecycle.py  test_presets.py  test_rate_limit.py  test_tasks.py  test_utils.py  test_validation.py
